--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="button">Button</string>
-    <string name="categoryName">Категории</string>
+    <string name="categories">Категории</string>
     <string name="measeureUnits">Единицы измерения</string>
     <string name="search">Поиск</string>
     <string name="find">Найти</string>
@@ -53,7 +53,7 @@
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
     <string name="authorizationToken">Authorization</string>
-    <string name="categoty">Категория</string>
+    <string name="category">Категория</string>
     <string name="add">Добавить</string>
     <string name="cancel">Отменить</string>
     <string name="measureUnit">Единица измерения</string>
@@ -64,6 +64,15 @@
     <string name="menu_terminal">Терминал</string>
     <string name="menu_stock">Склад</string>
     <string name="menu_add_product">Добавить</string>
+    <string name="cost">Цена</string>
+    <string name="quantity">Количество</string>
+    <string name="productName">Название продукта</string>
+    <string name="not_all_fields_are_filled">Не все поля заполнены</string>
+    <string name="filter">Фильтр</string>
+    <string name="for_sale">На продажу</string>
+    <string name="active">Активные</string>
+    <string name="active_product">Активный продукт</string>
+    <string name="product">Продукт</string>
 
 
     <string-array name="categoriesSpinner">
