--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,8 @@
     <string name="start">Начало</string>
     <string name="end">Конец</string>
     <string name="start_new_order">Начать новый заказ?</string>
+    <string name="order_number">Заказ №</string>
+    <string name="order">Заказать</string>
 
 
     <string-array name="categoriesSpinner">
